[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.14"
num-integer = "0.1.44"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.78"